--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -27,13 +27,17 @@ const { title } = Astro.props;
     <title>{title}</title>
   </head>
   <body
-    class="font-exo-2 h-full w-full overflow-x-hidden overflow-y-auto text-white"
+    class="font-exo-2 min-h-screen w-full overflow-x-hidden overflow-y-auto text-white"
   >
     <slot />
   </body>
 </html>
 <style is:global>
   body {
-    background: radial-gradient(circle at center, #2b2b2b 0%, #1b1b1b 100%);
+    background: linear-gradient(
+      to bottom,
+      rgb(15, 23, 28) 24.5%,
+      rgb(15, 23, 28) 66%
+    );
   }
 </style>
