--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -14,6 +14,54 @@ const { title } = Astro.props;
     <meta name="generator" content={Astro.generator} />
     <link rel="icon" href="./icon-rounded.png" />
     <meta name="darkreader-lock" />
+
+    <meta
+      name="description"
+      content="Bitwrap is an all-in-one solution for seamless integration between
+      GitHub and your code."
+    />
+    <meta name="og:title" content={title} />
+    <meta
+      name="og:description"
+      content="Bitwrap is an all-in-one solution for seamless integration between
+      GitHub and your code."
+    />
+    <meta
+      name="keywords"
+      content="bitwrap automatic deployment ci cd github integration neobrains"
+    />
+    <meta
+      name="og:image"
+      content="https://bitwrap.neobrains.me/icon-rounded.png"
+    />
+    <meta
+      name="theme-color"
+      content="radial-gradient(circle, #000033, #000000, #111111)"
+    />
+    <meta property="og:image:width" content="500" />
+    <meta property="og:image:height" content="500" />
+    <meta name="og:url" content="https://bitwrap.neobrains.me" />
+    <meta name="og:site_name" content="Bitwrap" />
+    <meta name="og:type" content="website" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="
+    twitter:title" content={title} />
+    <meta
+      content="Bitwrap is an all-in-one solution for seamless integration between
+      GitHub and your code."
+    />
+    <meta
+      name="twitter:image"
+      content="https://bitwrap.neobrains.me/icon-rounded.png"
+    />
+    <meta name="twitter:image:alt" content="Bitwrap Logo" />
+    <meta name="twitter:domain" content="bitwrap.neobrains.me" />
+    <meta name="twitter:label1" content="Organization" />
+    <meta name="twitter:data1" content="Neobrains" />
+    <meta name="twitter:label2" content="Location" />
+    <meta name="twitter:data2" content="India" />
+    <link rel="sitemap" href="/sitemap-index.xml" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -30,6 +78,7 @@ const { title } = Astro.props;
     class="font-exo-2 min-h-screen w-full overflow-x-hidden overflow-y-auto text-white"
   >
     <slot />
+    <script src="../scripts/script.js"></script>
   </body>
 </html>
 <style is:global>
