--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -62,7 +62,7 @@ const navbarItems = [
 </header>
 <div
   id="menu"
-  class="md:hidden z-50 p-8 items-start text-left transition-all delay-100 duration-100"
+  class="hidden lg:hidden z-50 p-8 md:px-32 md:pt-8 items-start text-left transition-all delay-100 duration-100"
 >
   <div class="flex flex-col bg-div-bg p-4 gap-2">
     {
