--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -83,6 +83,9 @@ const { title } = Astro.props;
 </html>
 <style is:global>
   body {
+    * {
+      -webkit-tap-highlight-color: transparent;
+    }
     background: linear-gradient(
       to bottom,
       rgb(15, 23, 28) 24.5%,
