--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -87,12 +87,12 @@ const features = [
     <div class="flex gap-2 w-full items-start text-left">
       <a
         href="https://discord.gg/xEEpJvE9py"
-        class="w-32 text-left bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded-lg"
+        class="text-left bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded-lg"
         >Join Discord</a
       >
       <a
         href="mailto:admin@neobrains.me"
-        class="w-32 text-left bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded-lg"
+        class="text-left bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded-lg"
         >Contact Us</a
       >
     </div>
