green buttons are better :)

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -40,7 +40,7 @@ const navbarItems = [
   </div>
   <a
     href="https://dash.neobrains.me"
-    class="hidden lg:block p-4 font-semibold rounded-md text-xl bg-div-bg hover:bg-hover-div-bg"
+    class="hidden lg:block p-4 bg-green-600 font-semibold rounded-md text-xl bg-div-bg hover:bg-green-700"
   >
     Beta Access
   </a>
@@ -77,7 +77,7 @@ const navbarItems = [
     }
     <a
       href="https://dash.neobrains.me"
-      class="p-4 font-semibold rounded-md text-xl bg-div-bg hover:bg-hover-div-bg"
+      class="p-4 font-semibold rounded-md text-xl bg-green-600 hover:bg-green-700"
     >
       Beta Access
     </a>
