--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,6 +23,33 @@ const features = [
       "With cloud storage and custom subdomains on the horizon, Bitwrap will provide a complete DevOps experience. Develop, deploy, and manage your code all in one platform, and stay focused on what matters most - your code. Coming Soon.",
   },
 ];
+
+const CACHE_EXPIRY_TIME = 3600; // Cache data for 1 hour
+
+async function fetchTeamData() {
+  const cacheKey = "teamData";
+  const cachedData = JSON.parse(localStorage.getItem(cacheKey));
+  if (cachedData && Date.now() < cachedData.expiryTime) {
+    return cachedData.data;
+  }
+  const response = await fetch("https://api.github.com/orgs/bitwrap/members");
+  const data = await response.json();
+  const owners = ["AyushSehrawat", "jnsougata"];
+  const team = data.map(({ login, avatar_url, html_url }) => {
+    return {
+      name: login,
+      avatar: avatar_url,
+      github: html_url,
+      role: owners.includes(login) ? "Owner" : "Member",
+    };
+  });
+
+  const expiryTime = Date.now() + CACHE_EXPIRY_TIME * 1000;
+  localStorage.setItem(cacheKey, JSON.stringify({ data: team, expiryTime }));
+  return team;
+}
+
+const team = (await fetchTeamData()) || [];
 ---
 
 <Layout title="Bitwrap">
@@ -56,7 +83,7 @@ const features = [
     <span>What We Provide</span>
   </div>
   <div
-    class="p-8 md:px-32 overflow-x-hidden grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 w-full overflow-hidden"
+    class="p-8 md:px-32 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 w-full overflow-hidden"
   >
     {
       features.map((feature) => (
@@ -96,6 +123,30 @@ const features = [
         >Contact Us</a
       >
     </div>
+  </div>
+
+  <div class="p-8 md:px-32 md:pt-20 text-4xl font-semibold overflow-hidden">
+    <span>Our Team</span>
+  </div>
+
+  <div
+    class="p-8 md:px-32 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 w-full overflow-hidden"
+  >
+    {
+      team.map((member) => (
+        <div class="flex items-start text-left gap-4 p-8 bg-div-bg rounded-lg hover:bg-hover-div-bg transition-all">
+          <img
+            class="w-16 h-16 rounded-full"
+            src={member.avatar}
+            alt={member.name}
+          />
+          <div class="flex flex-col items-start font-bold gap-4 ">
+            <span class="text-2xl font-bold">{member.name}</span>
+            <span class="text-gray-200 text-lg font-lato">{member.role}</span>
+          </div>
+        </div>
+      ))
+    }
   </div>
 
   <footer class="p-8 md:px-32 overflow-x-hidden">
