Moved to bitwrap.cloud

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -2,7 +2,7 @@
 const navbarItems = [
   {
     name: "Dashboard",
-    uri: "https://dash.neobrains.me",
+    uri: "https://dash.bitwrap.cloud",
   },
   {
     name: "Discord",
@@ -39,7 +39,7 @@ const navbarItems = [
     }
   </div>
   <a
-    href="https://dash.neobrains.me"
+    href="https://dash.bitwrap.cloud"
     class="hidden lg:block p-4 bg-green-600 font-semibold rounded-md text-xl bg-div-bg hover:bg-green-700"
   >
     Beta Access
@@ -76,7 +76,7 @@ const navbarItems = [
       ))
     }
     <a
-      href="https://dash.neobrains.me"
+      href="https://dash.bitwrap.cloud"
       class="p-4 font-semibold rounded-md text-xl bg-green-600 hover:bg-green-700"
     >
       Beta Access
