--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -118,7 +118,7 @@ const team = (await fetchTeamData()) || [];
         >Join Discord</a
       >
       <a
-        href="mailto:admin@neobrains.me"
+        href="mailto:admin@bitwrap.cloud"
         class="text-left bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded-lg"
         >Contact Us</a
       >
@@ -151,7 +151,7 @@ const team = (await fetchTeamData()) || [];
 
   <footer class="p-8 md:px-32 overflow-x-hidden">
     <span class="text-gray-200 text-lg font-lato">
-      © 2023 Neobrains. All rights reserved.
+      © 2023 Bitwrap. All rights reserved.
     </span>
   </footer>
 </Layout>
