--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -30,17 +30,14 @@ const { title } = Astro.props;
       name="keywords"
       content="bitwrap automatic deployment ci cd github integration neobrains"
     />
-    <meta
-      name="og:image"
-      content="https://bitwrap.neobrains.me/icon-rounded.png"
-    />
+    <meta name="og:image" content="https://bitwrap.cloud/icon-rounded.png" />
     <meta
       name="theme-color"
       content="radial-gradient(circle, #000033, #000000, #111111)"
     />
     <meta property="og:image:width" content="500" />
     <meta property="og:image:height" content="500" />
-    <meta name="og:url" content="https://bitwrap.neobrains.me" />
+    <meta name="og:url" content="https://bitwrap.cloud" />
     <meta name="og:site_name" content="Bitwrap" />
     <meta name="og:type" content="website" />
     <meta name="twitter:card" content="summary" />
@@ -52,10 +49,10 @@ const { title } = Astro.props;
     />
     <meta
       name="twitter:image"
-      content="https://bitwrap.neobrains.me/icon-rounded.png"
+      content="https://bitwrap.cloud/icon-rounded.png"
     />
     <meta name="twitter:image:alt" content="Bitwrap Logo" />
-    <meta name="twitter:domain" content="bitwrap.neobrains.me" />
+    <meta name="twitter:domain" content="bitwrap.cloud" />
     <meta name="twitter:label1" content="Organization" />
     <meta name="twitter:data1" content="Neobrains" />
     <meta name="twitter:label2" content="Location" />
