Removed excessive padding

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -125,7 +125,7 @@ const team = (await fetchTeamData()) || [];
     </div>
   </div>
 
-  <div class="p-8 md:px-32 md:pt-20 text-4xl font-semibold overflow-hidden">
+  <div class="p-8 md:px-32 text-4xl font-semibold overflow-hidden">
     <span>Our Team</span>
   </div>
 
